--- a/test.html
+++ b/test.html
@@ -11,6 +11,10 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body x-data="{expanded: false}" :class="{noscroll: expanded}">
+
+
+<!--test header et menu déroulant-->
+
     <header class="header">
         <div class="header__bande">
             <a href="/">
@@ -83,5 +87,21 @@
         </div>
 
     </header>
+    <main>
+        <img src="/public/icones/logo_mmi.png" alt="">
+       <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati rerum laudantium quae ab vitae voluptatum dolores quos ad nobis numquam. Culpa voluptatem quia qui illo aliquam distinctio, sed porro enim?
+        </p>  
+    </main>
+   
+
+<!--test footer-->
+
+    <footer class="footer">
+        <p>
+            hjsgf
+        </p>
+    </footer>
+
 </body>
 </html>
