--- a/test.html
+++ b/test.html
@@ -97,11 +97,72 @@
 
 <!--test footer-->
 
-    <footer class="footer">
-        <p>
-            hjsgf
-        </p>
-    </footer>
+<footer class="footer">
+    <a 
+        class="footer__nom"
+        href="/">
+            Andreu Vision
+        
+    </a>
+    <div class="footer__infos">
+        <a 
+            class="footer__infos--lien"
+            href="/informations.html#horaires">
+            Horaires
+        </a>
+        <a 
+            class="footer__infos--lien"
+            href="/informations.html#tarifs">
+            Tarifs
+        </a>
+        <a 
+            class="footer__infos--lien"
+            href="/informations.html#lieu">
+            Lieu
+        </a>                
+    </div>
+
+    <hr class="menu__liste--ligne">
+    <div class="footer__oeuvre">
+        <a 
+            class="footer__oeuvre--lien"
+            href="/paulandreu.html#oeuvres">
+            Oeuvres
+        </a>
+        <a class="footer__oeuvre--lien" href="/galerie.html">
+            Galerie
+        </a>
+    </div>
+
+    <hr class="menu__liste--ligne">
+    <div class="footer__contact">
+        <a 
+            class="footer__contact--lien"
+            href="/contact.html">
+            Contact
+        </a>
+    </div>
+
+    <hr class="menu__liste--ligne">
+
+    <div class="footer__reseaux">
+        <a 
+            class="footer__reseaux--lien"
+            href="https://www.instagram.com/fondationcartier/?hl=fr">
+            <img class="footer__reseaux--logo" src="/public/icones/instagram.svg" alt="logo instagram">
+        </a>
+        <a 
+            class="footer__reseaux--lien"
+            href="https://www.facebook.com/FondationCartier/?locale=fr_FR">
+            <img class="footer__reseaux--logo" src="/public/icones/facebook.svg" alt="logo facebook">
+        </a>
+        <a 
+            class="footer__reseaux--lien"
+            href="https://www.youtube.com/user/fondationcartier">
+            <img class="footer__reseaux--logo" src="/public/icones/youtube.svg" alt="logo youtube">
+        </a>
+    </div>
+</footer>
 
 </body>
 </html>
