--- a/fr/index.html
+++ b/fr/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
+    <a href="/test.html">
         kdfvnvk
-    </p>
+    </a>
 </body>
 </html>
