--- a/test.html
+++ b/test.html
@@ -17,11 +17,16 @@
 
     <header class="header">
         <div class="header__bande">
-            <a href="/">
+            <a href="/fr/index.html">
                 <img 
                     src="/public/icones/logo_site.svg" 
                     alt="logo mordor"
                     class="header__bande--logo">
+            </a>
+        </div>
+        <div class="header__bande">
+            <a href="/fr/index.html" class="header__bande--langue">
+                FR
             </a>
         </div>
         <div class="header__bande">
@@ -33,7 +38,7 @@
 
             <nav class="header__menu menu" :class="{actif: expanded}">
                 <div class="menu__haut">
-                    <a href="/">
+                    <a href="/fr/index.html">
                         <img 
                             src="/public/icones/logo_site.svg" 
                             alt="logo site"
@@ -50,21 +55,26 @@
                         <a 
                             href="/fr/replique.html"
                             class="menu__page--lien">
-                            Réplique
+                            Le Mordor Gandalf, c’est à gauche où à droite ?
                         </a>
                     </li>
                     <li class="menu__page">
                         <a 
                             class="menu__page--lien"
                             href="/fr/films.html">
-                           Film 
+                            Le seigneur des anneaux
+                        </a>
+                        <a 
+                            class="menu__page--lien"
+                            href="/fr/films.html">
+                            films
                         </a>
                     </li>
                     <li class="menu__page">
                         <a 
                             href="/fr/realisateur.html"
                             class="menu__page--lien">
-                            Réalisateur
+                            Peter Jackson
                         </a>
                     </li>
                     <li class="menu__page">
@@ -78,8 +88,33 @@
                         <a 
                             href="/fr/livres.html"
                             class="menu__page--lien">
+                            Le seigneur des anneaux
+                        </a>
+                        <a 
+                            href="/fr/livres.html"
+                            class="menu__page--lien">
                             Livres
                         </a>
+                    </li>
+                    <li class="menu__page">
+                        <a 
+                            href="/fr/anecdotes.html"
+                            class="menu__page--lien">
+                            Anecdotes
+                        </a>
+                    </li>
+                    <li class="menu__page">
+                        <a 
+                            href="/fr/livres.html"
+                            class="menu__page--lien">
+                            Memes                      
+                        </a>
+                    </li>
+                    <li class="menu__page">
+                        <a 
+                            href="/fr/livres.html"
+                            class="menu__page--lien">
+                            Différences livres / films                        </a>
                     </li>
                 </ul>
             </nav>
@@ -98,70 +133,79 @@
 <!--test footer-->
 
 <footer class="footer">
-    <a 
-        class="footer__nom"
-        href="/">
-            Andreu Vision
-        
+    <a href="/fr/index.html" 
+       class="footer__logo">
+        <img 
+            src="/public/icones/logo_site.svg" 
+            alt="logo site"
+            class="footer__logo--image">
     </a>
+    <ul class="footer__liste">
+        <li class="footer__liste--liens">
+            <a href="/fr/contact.html"
+               class="footer__liste--textes">
+                Contact
+            </a> 
+        </li>
+        <li class="footer__liste--liens">
+            <a href="/fr/a_propos.html"
+               class="footer__liste--textes">
+                A propos
+            </a>
+        </li>
+        <li class="footer__liste--liens">
+            <a href="/fr/glossaire.html"
+               class="footer__liste--textes">
+                Glossaire
+            </a>
+        </li>
+        <li class="footer__liste--liens">
+            <a href="/fr/autres_projets.html"
+               class="footer__liste--textes">
+                Autres projets
+            </a>
+        </li>     
+    </ul>
+    <div class="footer__mentions">
+        <p class="footer__mentions--texte">
+            Projet réalisé dans le cadre d’un exercice pédagogique au
+            <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/"
+               class="footer__mentions--liens">
+                <strong><i>département MMI de Montbéliard</i></strong>
+            </a>
+        </p>   
+    </div>
     <div class="footer__infos">
-        <a 
-            class="footer__infos--lien"
-            href="/informations.html#horaires">
-            Horaires
-        </a>
-        <a 
-            class="footer__infos--lien"
-            href="/informations.html#tarifs">
-            Tarifs
-        </a>
-        <a 
-            class="footer__infos--lien"
-            href="/informations.html#lieu">
-            Lieu
-        </a>                
-    </div>
-
-    <hr class="menu__liste--ligne">
-    <div class="footer__oeuvre">
-        <a 
-            class="footer__oeuvre--lien"
-            href="/paulandreu.html#oeuvres">
-            Oeuvres
-        </a>
-        <a class="footer__oeuvre--lien" href="/galerie.html">
-            Galerie
+        <p class="footer__infos--moi">
+            Roy Jérémy MMI 1 - B2 
+        </p>
+        <a href="mailto:jeremy.roy25200@gmail.com"
+           class="footer__infos--mail">
+                jeremy.roy25200@gmail.com
         </a>
     </div>
-
-    <hr class="menu__liste--ligne">
-    <div class="footer__contact">
-        <a 
-            class="footer__contact--lien"
-            href="/contact.html">
-            Contact
-        </a>
-    </div>
-
-    <hr class="menu__liste--ligne">
-
-    <div class="footer__reseaux">
-        <a 
-            class="footer__reseaux--lien"
-            href="https://www.instagram.com/fondationcartier/?hl=fr">
-            <img class="footer__reseaux--logo" src="/public/icones/instagram.svg" alt="logo instagram">
-        </a>
-        <a 
-            class="footer__reseaux--lien"
-            href="https://www.facebook.com/FondationCartier/?locale=fr_FR">
-            <img class="footer__reseaux--logo" src="/public/icones/facebook.svg" alt="logo facebook">
-        </a>
-        <a 
-            class="footer__reseaux--lien"
-            href="https://www.youtube.com/user/fondationcartier">
-            <img class="footer__reseaux--logo" src="/public/icones/youtube.svg" alt="logo youtube">
-        </a>
-    </div>
+    <ul class="footer__reseau">
+        <li class="footer__reseau--lien">
+            <a href="https://open.spotify.com/playlist/6RgXVuk0K38IlhWhVALjco?si=c5ac6ac468544caf">
+                <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer reseau--image">
+            </a>
+        </li>
+        <li class="footer__reseau--lien">
+            <a href="https://instagram.com/jerem_roy?igshid=OGQ5ZDc2ODk2ZA==">
+                <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer reseau--image">
+            </a>
+        </li>
+        <li class="footer__reseau--lien">
+            <a href="">
+                <img src="/public/icones/git.svg" alt="logo git hub" class="footer reseau--image">
+            </a>
+        </li>
+        <li class="footer__reseau--lien">
+            <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
+                <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer reseau--image">
+            </a>
+        </li>
+    </ul>
 </footer>
 
 </body>
