commencement des articles

--- a/fr/films.html
+++ b/fr/films.html
@@ -125,15 +125,48 @@
         <header class="page__header">
             <img src="/public/img/" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                Le seigneur des anneaux Films
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                Piliers du cinéma moderne, retour sur cette trilogie qui a marqué cette industrie et sur son tournage.
             </h2>
         </header>
 
-        <!-- suite du la page -->
+        <article class="page__article">
+            <img 
+                src="/public/img/" 
+                alt="affiches des films"
+                class="page__article--image">
+            <p class="page__article--texte">
+                Le seigneur des anneaux, c'est une trilogie de films sortie en 2001, 2002 et 2003 qui adapte les romans de J.R.R Tolkien. Pendant des années, les livres ont été considérés par tous comme inadaptable à cause de leur complexité et de la quantité de détails et d'évènement. 
+                Tous ? non, car à la fin des années 90, un homme va tenter ce pari fou : Peter Jackson ! À leur sortie, les films vont être un véritable succès grâce à leur tournage gigantesque et les effets digitaux alors nouveaux, et vont directement devenir des chefs d'œuvres, et ce n'est pas la moindre des choses avec un budget de 93 millions de dollars ! le total des recettes de la trilogie sera alors de presque 3 millions d'euros, a l'époque il était donc le deuxième film le plus rentable derrière Titanic.             
+            </p>
+            <p class="page__article--texte">
+                Tout au long des films, on suit donc Frodon et la communauté de l'anneau, qui ont pour mission d'aller en Mordor pour le détruire. On traverse alors les différents royaumes de la terre du milieu, on découvre leurs peuples, leurs traditions, leur histoire et leur culture. Cette quête passe donc par un grand voyage, des rencontres plus ou moins inattendues, des alliés et des ennemis et des batailles stratégiques qui sont mythiques et inoubliables ! Toute personne qui a vu une fois la charge des Rohirrims s'en rappel grâce à ses visuels magnifiques, sa musique et le discours iconique du Roi Théoden ! D'ailleurs je vous la remets car une fois de plus n'est jamais de trop :           
+            </p>
 
+            <!-- balise video-->
+
+            <img 
+                src="/public/img/" 
+                alt="carte terre du milieu"
+                class="page__article--image">
+            <h2 class="page__header--chapo">
+                Et si la communauté était allée à droite et non à gauche ?
+            </h2>
+            <p class="page__article--texte">
+                Cette question, personne ne l'a jamais vraiment développée, les gens ont préférer débattre sur des questions logique et des débats stériles comme :
+                "euh pourquoi ils n'ont pas pris les aigles ?" . 
+                Cette question, ne la posez jamais à un fan par peur de finir frapper à coups de hache tellement elle en a saoulé plus d'un… 
+                Bref, arrêtons de dévier et revenons au sujet. Qu'est-ce qui se serait passé si Frodon avait pris la route de droite et non de gauche ? 
+                En fait, la réponse est plutôt simple, d'après les différentes scènes, on se rend compte qu'il n'y a qu'une seule entrée à Fondcombe pour les visiteurs, par là où ils sont donc arrivés, le pont. On peut alors se dire "mais pourquoi il ne connaît pas le chemin s'il est arrivé ici ?" eh bien c'est simple, c'est le seul membre de la communauté de l'anneau à être arrivé inconscient chez les elfes. Il est donc le seul à ne pas savoir que que chemin de droite le ramènerait chez lui car c’est le chemin qu’ils ont pris et demande donc à Gandalf.
+                Une scène qui fait toujours sourire par la légèreté qu’elle apporte au film et qui sert à accentuer l’immersion dans le récit.
+            </p>
+            <a href="/fr/films.html"
+               class="page__article--btn">
+                Les films
+            </a>
+        </article>
     </main>
 
     <footer class="footer">
