--- a/fr/replique.html
+++ b/fr/replique.html
@@ -120,19 +120,44 @@
 
     </header>
 
-   
     <main class="page">
         <header class="page__header">
             <img src="/public/img/" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                Le Mordor Gandalf c’est à gauche où à droite ?
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                Le seigneur des anneaux, c'est des répliques cultes tout au long des films !
             </h2>
         </header>
-
-        <!-- suite du la page -->
+        <article class="page__article">
+            <img 
+                src="/public/img/" 
+                alt="gandlf mines moria"
+                class="page__article--image">
+            <p class="page__article--texte">
+                Toux ceux qui ont vu les films se rappelleront forcément d'une réplique au vu de la quantité qui sont devenues culte. D'ailleurs, même une personne qui n'a pas vu les films en a déjà entendu une car elles sont utilisées couramment comme le célèbre "vous ne passerez pas !", de Gandalf ou le "mon précieux" de Gollum. Ce sont d'ailleurs ces répliques qui ont permis a renforcer la puissance des films dans les moments les plus iconiques et inoubliables, et ça grâce à une écriture des livres parfaite et impactante de Tolkien.
+            </p>
+            <img 
+                src="/public/img/" 
+                alt="carte terre du milieu"
+                class="page__article--image">
+            <h2 class="page__header--chapo">
+                Et si la communauté était allée à droite et non à gauche ?
+            </h2>
+            <p class="page__article--texte">
+                Cette question, personne ne l'a jamais vraiment développée, les gens ont préférer débattre sur des questions logique et des débats stériles comme :
+                "euh pourquoi ils n'ont pas pris les aigles ?" . 
+                Cette question, ne la posez jamais à un fan par peur de finir frapper à coups de hache tellement elle en a saoulé plus d'un… 
+                Bref, arrêtons de dévier et revenons au sujet. Qu'est-ce qui se serait passé si Frodon avait pris la route de droite et non de gauche ? 
+                En fait, la réponse est plutôt simple, d'après les différentes scènes, on se rend compte qu'il n'y a qu'une seule entrée à Fondcombe pour les visiteurs, par là où ils sont donc arrivés, le pont. On peut alors se dire "mais pourquoi il ne connaît pas le chemin s'il est arrivé ici ?" eh bien c'est simple, c'est le seul membre de la communauté de l'anneau à être arrivé inconscient chez les elfes. Il est donc le seul à ne pas savoir que que chemin de droite le ramènerait chez lui car c’est le chemin qu’ils ont pris et demande donc à Gandalf.
+                Une scène qui fait toujours sourire par la légèreté qu’elle apporte au film et qui sert à accentuer l’immersion dans le récit.
+            </p>
+            <a href="/fr/films.html"
+               class="page__article--btn">
+                Les films
+            </a>
+        </article>
 
     </main>
 
