ajout image webp, continuation html

--- a/fr/films.html
+++ b/fr/films.html
@@ -86,6 +86,7 @@
                             class="menu__page--lien">
                             Le seigneur des anneaux
                         </a>
+                        <br>
                         <a 
                             href="/fr/livres.html"
                             class="menu__page--lien">
@@ -123,7 +124,7 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
                 Le seigneur des anneaux Films
             </h1>
@@ -134,9 +135,10 @@
 
         <article class="page__article">
             <img 
-                src="/public/img/" 
+                src="/public/img/affiche_trilogie.webp" 
                 alt="affiches des films"
                 class="page__article--image">
+            <p class="media__descriptif">Affiches des films</p>
             <p class="page__article--texte">
                 Le seigneur des anneaux, c'est une trilogie de films sortie en 2001, 2002 et 2003 qui adapte les romans de J.R.R Tolkien. Pendant des années, les livres ont été considérés par tous comme inadaptable à cause de leur complexité et de la quantité de détails et d'évènement. 
                 Tous ? non, car à la fin des années 90, un homme va tenter ce pari fou : Peter Jackson ! À leur sortie, les films vont être un véritable succès grâce à leur tournage gigantesque et les effets digitaux alors nouveaux, et vont directement devenir des chefs d'œuvres, et ce n'est pas la moindre des choses avec un budget de 93 millions de dollars ! le total des recettes de la trilogie sera alors de presque 3 millions d'euros, a l'époque il était donc le deuxième film le plus rentable derrière Titanic.             
@@ -144,27 +146,40 @@
             <p class="page__article--texte">
                 Tout au long des films, on suit donc Frodon et la communauté de l'anneau, qui ont pour mission d'aller en Mordor pour le détruire. On traverse alors les différents royaumes de la terre du milieu, on découvre leurs peuples, leurs traditions, leur histoire et leur culture. Cette quête passe donc par un grand voyage, des rencontres plus ou moins inattendues, des alliés et des ennemis et des batailles stratégiques qui sont mythiques et inoubliables ! Toute personne qui a vu une fois la charge des Rohirrims s'en rappel grâce à ses visuels magnifiques, sa musique et le discours iconique du Roi Théoden ! D'ailleurs je vous la remets car une fois de plus n'est jamais de trop :           
             </p>
-
-            <!-- balise video-->
-
-            <img 
-                src="/public/img/" 
-                alt="carte terre du milieu"
-                class="page__article--image">
+            <video src="" class="page__article--video"></video>
+            <p class="media__descriptif">Charge des Rohirrims - Le Retour du roi</p>
             <h2 class="page__header--chapo">
-                Et si la communauté était allée à droite et non à gauche ?
+                Piliers du cinéma moderne, retour sur cette trilogie qui a marqué cette industrie et sur son tournage.            
             </h2>
+            <img 
+                src="/public/img/hobbiton.webp" 
+                alt="image de la comté"
+                class="page__article--image">
+            <p class="media__descriptif">Vilage de HobbitBourg</p>
+            
             <p class="page__article--texte">
-                Cette question, personne ne l'a jamais vraiment développée, les gens ont préférer débattre sur des questions logique et des débats stériles comme :
-                "euh pourquoi ils n'ont pas pris les aigles ?" . 
-                Cette question, ne la posez jamais à un fan par peur de finir frapper à coups de hache tellement elle en a saoulé plus d'un… 
-                Bref, arrêtons de dévier et revenons au sujet. Qu'est-ce qui se serait passé si Frodon avait pris la route de droite et non de gauche ? 
-                En fait, la réponse est plutôt simple, d'après les différentes scènes, on se rend compte qu'il n'y a qu'une seule entrée à Fondcombe pour les visiteurs, par là où ils sont donc arrivés, le pont. On peut alors se dire "mais pourquoi il ne connaît pas le chemin s'il est arrivé ici ?" eh bien c'est simple, c'est le seul membre de la communauté de l'anneau à être arrivé inconscient chez les elfes. Il est donc le seul à ne pas savoir que que chemin de droite le ramènerait chez lui car c’est le chemin qu’ils ont pris et demande donc à Gandalf.
-                Une scène qui fait toujours sourire par la légèreté qu’elle apporte au film et qui sert à accentuer l’immersion dans le récit.
+                Peter Jackson, néo-zélandais d'origine c'est donc tourné vers les lieux de sa terre natale pour le plus de réalisme possible grâce à la géographie de l'ile avec ses montagnes, ses plaines et ses forêts. 
+                Pour le film, c'est donc plusieurs lieux fictifs qui ont été construit en vrai comme Edoras, la capitale du Rohan qui a ensuite été démontée, et Hobbitebourg, le village hobbit qui lui est toujours présent et que l'on peut visiter et qui fait vivre le tourisme du pays.
             </p>
-            <a href="/fr/films.html"
-               class="page__article--btn">
-                Les films
+            <p class="page__article--texte">
+                Comme on l'a dit, le tournage a été gigantesque, avec quelques chiffres c'est encore plus flagrant :
+                <p>- 20 602 figurants au total pour le film </p>
+                <p>- 1 600 prothèses de pied de hobbits pour le 1er film </p>
+                <p>- 19 000 costumes </p>
+                <p>- 48 000 pièces d'armure </p>
+                <p>- 2 000 armes et 500 arcs </p>
+                <p>- 159 prothèses de nez juste pour Gandalf </p>
+                <p>- Et enfin plus de 12 millions d'anneaux assemblés à la mains pour faire les cottes de mailles.</p> 
+            </p>
+            <p class="page__article--texte">
+                Le tout avec un casting royal et des acteurs impliqués au possible (Viggo Mortensen [Aragorn] qui ne se séparait jamais de son cheval ni de son épée pour mieux incarner son personnage par exemple). 
+                Pour recréer tous ces décors et lieux emblématiques des livres, Peter Jackson a donc fait appel aux illustrateurs des livres John Howe et Alan Lee, pour un résultat frappant de réalisme. Le résultat on le connait, des images magnifiques avec des paysages à couper le souffle et un total de 17 Oscars pour 3 films 
+                (en comparaison Star Wars c'est 15 Oscars en 7 films et Harry Potter 0 pour 8 films).
+            </p>
+
+            <a href="/fr/realisateur.html" class="page__article--btn">
+                Peter Jackson
+                <img src="/public/icones/chevron_right.svg" alt="fleche">
             </a>
         </article>
     </main>
