--- a/fr/index.html
+++ b/fr/index.html
@@ -120,7 +120,7 @@
 
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
                 Articles Principaux
             </h1>
@@ -130,13 +130,14 @@
         </header>
         <article class="article">
             <img 
-                src="/public/img/" 
+                src="/public/img/index_carte2.webp" 
                 alt="carte terre du milieu"
                 class="article__img">
-            <h3 class="article__titre">
-                Le Mordor Gandalf, c'est à gauche où à droite ?
-            </h3>
+            
             <div class="article__bloc">
+                <h3 class="article__titre">
+                    Le Mordor Gandalf, c'est à gauche où à droite ?
+                </h3>
                 <p class="article__bloc--date">
                     publié le 24/10/2023        
                 </p>
@@ -150,13 +151,13 @@
         </article>
         <article class="article">
             <img 
-                src="/public/img/" 
+                src="/public/img/affiche_film1.webp" 
                 alt="affiche lotr"
                 class="article__img">
-            <h3 class="article__titre">
-                Le seigneur des anneaux Films            
-            </h3>
             <div class="article__bloc">
+                <h3 class="article__titre">
+                    Le seigneur des anneaux Films            
+                </h3>
                 <p class="article__bloc--date">
                     publié le 24/10/2023        
                 </p>
@@ -170,12 +171,13 @@
         </article>
         <article class="article">
             <img 
-                src="/public/img/" 
+                src="/public/img/index_realisateur.webp" 
                 alt="image peter jackson"
                 class="article__img">
-            <h3 class="article__titre">
-                Peter Jackson            </h3>
             <div class="article__bloc">
+                <h3 class="article__titre">
+                    Peter Jackson            
+                </h3>
                 <p class="article__bloc--date">
                     publié le 24/10/2023        
                 </p>
@@ -189,13 +191,13 @@
         </article>
         <article class="article">
             <img 
-                src="/public/img/" 
+                src="/public/img/index_musique.webp" 
                 alt="image howard shore"
                 class="article__img">
-            <h3 class="article__titre">
-                The Shire            
-            </h3>
             <div class="article__bloc">
+                <h3 class="article__titre">
+                    The Shire            
+                </h3>
                 <p class="article__bloc--date">
                     publié le 24/10/2023        
                 </p>
@@ -209,14 +211,14 @@
         </article>
         <article class="article">
             <img 
-                src="/public/img/" 
+                src="/public/img/livre_lotr.webp" 
                 alt="image livre lotr"
                 class="article__img">
-            <h3 class="article__titre">
-                Le seigneur des anneaux
-                Livres            
-            </h3>
-            <div class="article__bloc">
+            <div class="article__bloc">  
+                <h3 class="article__titre">
+                    Le seigneur des anneaux
+                    Livres            
+                </h3>
                 <p class="article__bloc--date">
                     publié le 24/10/2023        
                 </p>
