--- a/fr/musique.html
+++ b/fr/musique.html
@@ -123,16 +123,48 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                The Shire
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                Un film sans musique, c'est perdre 70 % de celui-ci
             </h2>
         </header>
+        <article class="page__article">
+            <img 
+                src="/public/img/howard_shore.webp" 
+                alt="image Howard Shore"
+                class="page__article--image">
+            <p class="media__descriptif">Howard Shore - Compositeur de génie</p>
+            <p class="page__article--texte">
+                Ce qui fait en grande partie un film c'est ses musiques, qui donnent une identité sonore au film et qui permet de véhiculer des sentiments et de les amplifier. 
+                Et c'est le cas du seigneur des anneaux, Howard Shore, le compositeur a fait un travail monstrueux et juste magnifique. 
+                Une simple musique rend épique trois acteurs qui courent dans un champ et des plans ou des images au drone qui parcourt les montagnes.
+            </p>
+            
 
-        <!-- suite du la page -->
+
+            <div class="citation">
+                <q 
+                    class="citation__texte"
+                    cite="https://lotr.fandom.com/fr/wiki/Peter_Jackson">
+                    Je pense que la musique que j’ai composée était fidèle à Tolkien et sincère. Ça venait du cœur. Et je crois que ça a parlé et continue de parler aux gens qui aiment les livres et les films du 'Seigneur des Anneaux'.
+                </q>
+                <p class="citation__auteur">- Howard Shore -</p>
+            </div>
+
+        </article>
+        <p class="page__article--texte">
+            La musique surement la plus connue est celle de la comté : The Shire. 
+            Cette musique est l'exemple parfait de celle qui transmet des émotions. Quand je l'entends je retrouve directement l'aspect joyeux et paisible de la comté grâce aux notes calmes et agréables des violons qui lui donne un ton léger. 
+            En l'entendant on sait qu'on est transporté dans un monde fantastique, et non réel ou "futuriste" comme avec les musiques de Hans Zimmer pour Inception ou Interstellar. C'est cette patte caractéristique qui définit le travail de Howard Shore et les films, avec des rappels de certains morceaux dans d'autres. 
+            Par exemple, au début on peut retrouver une version moins épique de la musique "Balin's tomb" mais qui donne un avant-gout du plaisir auditif que l'on va prendre dans une des scènes les plus impressionnante du premier film.
+        </p>
+        <a href="/fr/musique.html" class="page__article--btn">
+            Tolkien et ses livres
+            <img src="/public/icones/chevron_right.svg" alt="fleche">
+        </a>
 
     </main>
 
