--- a/fr/replique.html
+++ b/fr/replique.html
@@ -122,7 +122,7 @@
 
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
                 Le Mordor Gandalf c’est à gauche où à droite ?
             </h1>
@@ -132,19 +132,22 @@
         </header>
         <article class="page__article">
             <img 
-                src="/public/img/" 
-                alt="gandlf mines moria"
+                src="/public/img/gandalf_moria.webp" 
+                alt="gandalf mines moria"
                 class="page__article--image">
+            <p class="media__descriptif">Gandalf dans les mines de la Moria</p>
             <p class="page__article--texte">
                 Toux ceux qui ont vu les films se rappelleront forcément d'une réplique au vu de la quantité qui sont devenues culte. D'ailleurs, même une personne qui n'a pas vu les films en a déjà entendu une car elles sont utilisées couramment comme le célèbre "vous ne passerez pas !", de Gandalf ou le "mon précieux" de Gollum. Ce sont d'ailleurs ces répliques qui ont permis a renforcer la puissance des films dans les moments les plus iconiques et inoubliables, et ça grâce à une écriture des livres parfaite et impactante de Tolkien.
             </p>
-            <img 
-                src="/public/img/" 
-                alt="carte terre du milieu"
-                class="page__article--image">
             <h2 class="page__header--chapo">
                 Et si la communauté était allée à droite et non à gauche ?
             </h2>
+            <img 
+                src="/public/img/carte_middle_earth.webp" 
+                alt="carte terre du milieu"
+                class="page__article--image">
+            <p class="media__descriptif">Carte de la Terre du milieu</p>
+            
             <p class="page__article--texte">
                 Cette question, personne ne l'a jamais vraiment développée, les gens ont préférer débattre sur des questions logique et des débats stériles comme :
                 "euh pourquoi ils n'ont pas pris les aigles ?" . 
@@ -153,9 +156,9 @@
                 En fait, la réponse est plutôt simple, d'après les différentes scènes, on se rend compte qu'il n'y a qu'une seule entrée à Fondcombe pour les visiteurs, par là où ils sont donc arrivés, le pont. On peut alors se dire "mais pourquoi il ne connaît pas le chemin s'il est arrivé ici ?" eh bien c'est simple, c'est le seul membre de la communauté de l'anneau à être arrivé inconscient chez les elfes. Il est donc le seul à ne pas savoir que que chemin de droite le ramènerait chez lui car c’est le chemin qu’ils ont pris et demande donc à Gandalf.
                 Une scène qui fait toujours sourire par la légèreté qu’elle apporte au film et qui sert à accentuer l’immersion dans le récit.
             </p>
-            <a href="/fr/films.html"
-               class="page__article--btn">
+            <a href="/fr/films.html" class="page__article--btn">
                 Les films
+                <img src="/public/icones/chevron_right.svg" alt="fleche">
             </a>
         </article>
 
