--- a/fr/realisateur.html
+++ b/fr/realisateur.html
@@ -8,8 +8,9 @@
     <script defer src="https://unpkg.com/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body x-data="{expanded: false}" :class="{noscroll: expanded}">
 
+
+<body x-data="{expanded: false}" :class="{noscroll: expanded}">
 
     <header class="header">
         <div class="header__bande">
@@ -123,16 +124,79 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                Peter Jackson
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                On l'a mentionné dans d'autres articles mais qu'aurait été cette saga culte sans son réalisateur ?
             </h2>
         </header>
-
-        <!-- suite du la page -->
+        <article class="page__article">
+            <img 
+                src="/public/img/peter_jackson.webp" 
+                alt="image Peter Jackson"
+                class="page__article--image">
+            <p class="media__descriptif">
+                Peter Jackson sur le plateau de tournage
+            </p>
+            <p class="page__article--texte">
+                Devenus le héros de tous les fans, Peter Jackson, celui qui a fait ce qui paraissait impossible aux yeux de tous, est né en Nouvelle-Zélande. 
+                Il se fera connaitre en tant que réalisateur grâce à des films et séries horrifiques, puis va diriger de plus gros projets. Celui qui le fera décoller, on en parle depuis tout a l'heure : Le seigneur des anneaux.
+            </p>
+            <p class="page__article--texte">
+                C'est un projet important mais qui, une fois fini, va le mettre sur le podium d'Hollywood alors qu'il ne s'attendait pas à un tel succès :
+            </p>
+            <div class="citation">
+                <q 
+                    class="citation__texte"
+                    cite="https://lotr.fandom.com/fr/wiki/Peter_Jackson">
+                    Obtenir un Oscar serait un moment incroyable dans ma carrière, cela ne fait aucun doute. Mais les films du Seigneur des anneaux ne sont pas faits pour les Oscars, ils sont faits pour le public.
+                </q>
+                <p class="citation__auteur">- Peter Jackson -</p>
+            </div>
+                
+            <p class="page__article--texte">
+                Résultat ? 17 Oscars, 11 pour le troisième film ce qui fait de lui un des trois films les plus oscarisés au monde avec Ben-Hur et Titanic. Suite à cette réussite, il va continuer à réaliser et produire de grands films, avec les plus grands réalisateurs et les plus grands acteurs comme Steven Spielberg et Adrien Brody. Il va aussi réaliser la trilogie du Hobbit, aussi un énorme succès mais un peu moins appréciée par les fans pour les trop grosses libertées prises par rapport au livre. Ce qui n'enlève rien à son immense talent.            
+            </p>
+            <h2 class="page__header--chapo">
+                Voici donc un résumé de ses films les plus connus, qu'il soit réalisateur ou producteur :            
+            </h2>
+            <div class="gallerie" x-data="{
+                async parcFilm () {
+                    const resp = await fetch('/json/info_films.json');
+                    return await resp.json();
+                    },
+                }">
+                <template
+                class="gallerie_template"
+                x-for="info of parcFilm">
+                    <div class="gallerie__contenu">
+                        <a :href="info.href" class="gallerie__contenu--image">
+                            <img 
+                                :src="info.img" 
+                                :alt="info.alt">
+                        </a>
+                        <div class="gallerie__description">
+                            <div>
+                                <p class="gallerie__description--texte">Film :</p>
+                                <span class="gallerie__description--texte" x-text="info.film">Titre Film</span>
+                                <p class="gallerie__description--texte">Date :</p>
+                                <span class="gallerie__description--texte" x-text="info.date">Date de sortie</span>
+                                <p class="gallerie__description--texte">Réalisateur :</p>
+                                <span class="gallerie__description--texte" x-text="info.realisateur">Réalisateur</span>
+                                <p class="gallerie__description--texte">Producteur :</p>
+                                <span class="gallerie__description--texte" x-text="info.producteur">Producteur</span>
+                            </div>
+                        </div>
+                    </div>
+                </template>
+            </div>
+            <a href="/fr/musique.html" class="page__article--btn">
+                The Shire
+                <img src="/public/icones/chevron_right.svg" alt="fleche">
+            </a>
+        </article>
 
     </main>
 
